@@ -15,6 +15,7 @@ Version 2.5 (build ...)
 - Raised the number of available database ids to 10.
 - Bugfix: Bind array with empty fields (GitHub issue #6, thx to Knut Voigtlaender)
 - Fixed: Building mksqlite with buildit.m failed on linux using newer MATLAB versions.
+- Long running calls of mksqlite may be aborted by pressing Ctrl+C now.
 
 Version 2.4 (build 123 - 29. Aug. 2016)
 - Removed some typos
